current code --> hangs on testing constraint jacobian

--- a/problem.ipynb
+++ b/problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,9 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "load_costs (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "function quad_costs(n_lift, m_lift, scenario=:p2pa)\n",
     "    if scenario == :hover\n",
@@ -125,9 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "quad_cost (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "function quad_cost(params::NamedTuple, Z::Vector)::Real\n",
     "    idx, N = params.idx, params.N\n",
@@ -163,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +210,6 @@
     "\n",
     "    J = 0\n",
     "    for i = 1:N-1\n",
-    "        x_quads = Z[idx.x[i]][]\n",
     "        J += 0.5 * (Z[idx.x[i]] - Xref[i])' * Q * (Z[idx.x[i]] - Xref[i]) +\n",
     "             0.5 * (Z[idx.u[i]] - Uref[i])' * R * (Z[idx.u[i]] - Uref[i])\n",
     "    end\n",
@@ -223,9 +242,8 @@
     "\n",
     "    # create c -1in a ForwardDiff friendly way (check HW0)\n",
     "    # c = Vector{eltype    c = zeros(eltype(Z), 1)\n",
-    "\n",
-    "\n",
-    "    for i = 1:N\n",
+    "    c = zeros(eltype(Z), 1)\n",
+    "    for i = 1:N-1\n",
     "        x = Z[idx.x[i]]\n",
     "        u = Z[idx.u[i]]\n",
     "        for k = 1:NUM_QUAD\n",
@@ -273,17 +291,17 @@
     "function equality_constraints(params::NamedTuple, Z::Vector)::Vector\n",
     "    N, idx, xic, xg = params.N, params.idx, params.xic, params.xg\n",
     "    return [Z[idx.x[1]] - xic;\n",
-    "        Z[idx.x[N]] - xg;\n",
-    "        dynamics_constraints(params, Z);\n",
-    "        equal_tension_cable_constraint(params, Z);\n",
-    "        quaternion_constraints(params, Z);\n",
-    "        rope_length_constraint(params, Z)]\n",
+    "        Z[idx.x[N]] - xg\n",
+    "    dynamics_constraints(params, Z)]\n",
+    "    quaternion_constraints(params, Z);\n",
+    "    # equal_tension_cable_constraint(params, Z);\n",
+    "    # rope_length_constraint(params, Z)]\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +333,6 @@
     "            end\n",
     "        end\n",
     "    end\n",
-    "    @show size(c)\n",
     "    return c\n",
     "end\n",
     "\n",
@@ -326,7 +343,7 @@
     "    obstacle_positions = params.obstacles\n",
     "    dquad, dobs = params.dquad, params.dobs\n",
     "    #Assuming obstacle positions is of form [[x1,y1],[x2,y2]]\n",
-    "    c = Vector{eltype(Z)}()\n",
+    "    c = zeros(eltype(Z), 1)\n",
     "    for i = 1:N-1 #Each timestep\n",
     "        xi = Z[idx.x[i]]\n",
     "        xi_quads = [xi[(quad-1)*n_lift+1:n_lift*quad] for quad = 1:NUM_QUAD]\n",
@@ -347,10 +364,10 @@
     "    obstacle_positions = params.obstacles\n",
     "    dload, dobs = params.dload, params.dobs\n",
     "    #Assuming obstacle positions is of form [[x1,y1],[x2,y2]]\n",
-    "    c = Vector{eltype(Z)}()\n",
+    "    c = zeros(eltype(Z), 1)\n",
     "    for i = 1:N-1 #Each timestep\n",
     "        xi = Z[idx.x[i]]\n",
-    "        xi_load = xi[1:3 .+(1:2) .+ n_lift * NUM_QUAD]\n",
+    "        xi_load = xi[1:2 .+ n_lift*NUM_QUAD]\n",
     "        for j = 1:length(obstacle_positions) #each obstacle\n",
     "            constraint_val = dload + dobs - norm(xi_load - obstacle_positions[j])^2\n",
     "            push!(c, constraint_val)\n",
@@ -363,7 +380,7 @@
     "    idx, N, dt = params.idx, params.N, params.dt\n",
     "    m_lift = params.m_lift\n",
     "    NUM_QUAD = params.NUM_QUAD\n",
-    "    c = Vector{eltype(Z)}()\n",
+    "    c = zeros(eltype(Z), 1)\n",
     "    for i = 1:N-1 #Each timestep\n",
     "        ui = Z[idx.u[i]]\n",
     "        ui_load = ui[(1:NUM_QUAD).+m_lift*NUM_QUAD]\n",
@@ -375,18 +392,29 @@
     "end\n",
     "\n",
     "function inequality_constraints(params::NamedTuple, Z)\n",
-    "    return [proximity_constraint(params, Z);\n",
-    "        obstacle_proximity_constraint(params, Z);\n",
-    "        load_proximity_constraint(params, Z);\n",
-    "        positive_cable_tension(params, Z)]\n",
+    "    return []\n",
+    "    # return [proximity_constraint(params, Z);\n",
+    "    #     obstacle_proximity_constraint(params, Z);\n",
+    "    #     load_proximity_constraint(params, Z);\n",
+    "    #     positive_cable_tension(params, Z)]\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "reference_trajectory (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "function states_from_center(NUM_QUAD, load_pos, r=3)\n",
     "    x = [zeros(13) for i = 1:NUM_QUAD+1]\n",
@@ -413,38 +441,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size(c) = (601,)\n"
-     ]
-    },
-    {
-     "ename": "DimensionMismatch",
-     "evalue": "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(2),), b has dims (Base.OneTo(0),), mismatch at 1\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"dimensions must match: a has dims (Base.OneTo(2),), b has dims (Base.OneTo(0),), mismatch at 1\")\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] promote_shape\n",
-      "   @ ./indices.jl:178 [inlined]\n",
-      " [2] promote_shape\n",
-      "   @ ./indices.jl:169 [inlined]\n",
-      " [3] -(A::Vector{Float64}, B::Vector{Any})\n",
-      "   @ Base ./arraymath.jl:38\n",
-      " [4] obstacle_proximity_constraint(params::NamedTuple{(:model, :nx, :nu, :tf, :dt, :t_vec, :N, :M1, :M2, :J1, :J2, :xic, :xg, :idx, :Q, :R, :Qf, :Xref, :Uref, :NUM_QUAD, :n_lift, :m_lift, :n_load, :m_load, :obstacles, :dload, :dquad, :dobs), Tuple{NamedTuple{(:lift, :load), Tuple{NamedTuple{(:mass, :J, :Jinv, :gravity, :motor_dist, :kf, :km), Tuple{Float64, SMatrix{3, 3, Float64, 9}, SMatrix{3, 3, Float64, 9}, SVector{3, Float64}, Float64, Float64, Float64}}, NamedTuple{(:m, :gravity, :radius), Tuple{Float64, SVector{3, Float64}, Float64}}}}, Int64, Int64, Int64, Float64, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}}, Int64, Vector{Int64}, Vector{Int64}, Vector{Int64}, Vector{Int64}, Vector{Float64}, Vector{Float64}, NamedTuple{(:nx, :nu, :N, :nz, :nc, :x, :u, :c), Tuple{Int64, Int64, Int64, Int64, Int64, Vector{UnitRange{Int64}}, Vector{UnitRange{Int64}}, Vector{UnitRange{Int64}}}}, Matrix{Float64}, Matrix{Float64}, Matrix{Float64}, Vector{Vector{Float64}}, Vector{Vector{Float64}}, Int64, Int64, Int64, Int64, Int64, Vector{Vector{Any}}, Int64, Float64, Int64}}, Z::Vector{Float64})\n",
-      "   @ Main ~/Desktop/16745/recitations-2024/16745proj/problem.ipynb:36\n",
-      " [5] inequality_constraints\n",
-      "   @ ~/Desktop/16745/recitations-2024/16745proj/problem.ipynb:79 [inlined]\n",
-      " [6] fmincon(cost::typeof(system_cost), equality_constraint::typeof(equality_constraints), inequality_constraint::typeof(inequality_constraints), x_l::Vector{Float64}, x_u::Vector{Float64}, c_l::Vector{Float64}, c_u::Vector{Float64}, x0::Vector{Float64}, params::NamedTuple{(:model, :nx, :nu, :tf, :dt, :t_vec, :N, :M1, :M2, :J1, :J2, :xic, :xg, :idx, :Q, :R, :Qf, :Xref, :Uref, :NUM_QUAD, :n_lift, :m_lift, :n_load, :m_load, :obstacles, :dload, :dquad, :dobs), Tuple{NamedTuple{(:lift, :load), Tuple{NamedTuple{(:mass, :J, :Jinv, :gravity, :motor_dist, :kf, :km), Tuple{Float64, SMatrix{3, 3, Float64, 9}, SMatrix{3, 3, Float64, 9}, SVector{3, Float64}, Float64, Float64, Float64}}, NamedTuple{(:m, :gravity, :radius), Tuple{Float64, SVector{3, Float64}, Float64}}}}, Int64, Int64, Int64, Float64, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}}, Int64, Vector{Int64}, Vector{Int64}, Vector{Int64}, Vector{Int64}, Vector{Float64}, Vector{Float64}, NamedTuple{(:nx, :nu, :N, :nz, :nc, :x, :u, :c), Tuple{Int64, Int64, Int64, Int64, Int64, Vector{UnitRange{Int64}}, Vector{UnitRange{Int64}}, Vector{UnitRange{Int64}}}}, Matrix{Float64}, Matrix{Float64}, Matrix{Float64}, Vector{Vector{Float64}}, Vector{Vector{Float64}}, Int64, Int64, Int64, Int64, Int64, Vector{Vector{Any}}, Int64, Float64, Int64}}, diff_type::Symbol; tol::Float64, c_tol::Float64, max_iters::Int64, verbose::Bool)\n",
-      "   @ Main ~/Desktop/16745/recitations-2024/16745proj/utils/fmincon.jl:182\n",
-      " [7] top-level scope\n",
-      "   @ ~/Desktop/16745/recitations-2024/16745proj/problem.ipynb:121"
+      "---------checking dimensions of everything----------\n",
+      "---------all dimensions good------------------------\n",
+      "---------diff type set to :auto (ForwardDiff.jl)----\n",
+      "---------testing objective gradient-----------------\n",
+      "---------testing constraint Jacobian----------------\n"
      ]
     }
    ],
@@ -481,11 +489,20 @@
     "xic = states_from_center(NUM_QUAD, [xic_load; zeros(13 - 3)])\n",
     "xg = states_from_center(NUM_QUAD, [xg_load; zeros(13 - 3)])\n",
     "\n",
-    "\n",
-    "\n",
     "# reference trajectory \n",
     "Xref = reference_trajectory(N, xic, xg)\n",
     "Uref = [0.01 * randn(idx.nu) for i = 1:N-1]\n",
+    "\n",
+    "n_lift = 13\n",
+    "m_lift = 6 #5 + 1 for quaternion slack variable \n",
+    "n_load = 6\n",
+    "m_load = NUM_QUAD\n",
+    "# LQR cost function (tracking Xref, Uref)\n",
+    "q_lift, r_lift, qf_lift = quad_costs(n_lift, m_lift)\n",
+    "q_load, r_load, qf_load = load_costs(n_load, m_load)\n",
+    "Q = diagm(vcat([q_lift for _ in 1:NUM_QUAD]..., q_load))\n",
+    "R = diagm(vcat([r_lift for _ in 1:NUM_QUAD]..., r_load))\n",
+    "Qf = diagm(vcat([qf_lift for _ in 1:NUM_QUAD]..., qf_load))\n",
     "\n",
     "# put everything useful in params \n",
     "params = (\n",
@@ -507,50 +524,45 @@
     "    Xref=Xref,\n",
     "    Uref=Uref,\n",
     "    NUM_QUAD=NUM_QUAD,\n",
-    "    n_lift=13,\n",
-    "    m_lift=6, #5 + 1 for quaternion slack variable \n",
-    "    n_load=6,\n",
+    "    n_lift=n_lift,\n",
+    "    m_lift=m_lift, #5 + 1 for quaternion slack variable \n",
+    "    n_load=n_load,\n",
     "    m_load=NUM_QUAD, # num quad /L    dcable = 1.55,\n",
-    "    obstacles=[[]], #Set THESE\n",
-    "    dload=1,\n",
+    "    obstacles=[], #Set THESE\n",
+    "    dload=1.55,\n",
     "    dquad=0.5,\n",
     "    dobs=1,\n",
     ")\n",
     "\n",
     "\n",
-    "# LQR cost function (tracking Xref, Uref)\n",
-    "q_lift, r_lift, qf_lift = quad_costs(n_lift, m_lift)\n",
-    "q_load, r_load, qf_load = load_costs(n_load, m_load)\n",
-    "Q = diagm(vcat([q_lift for _ in 1:NUM_QUAD]..., q_load))\n",
-    "R = diagm(vcat([r_lift for _ in 1:NUM_QUAD]..., r_load))\n",
-    "Qf = diagm(vcat([qf_lift for _ in 1:NUM_QUAD]..., qf_load))\n",
+    "\n",
     "\n",
     "\n",
     "# TODO: primal bounds\n",
     "x_l = -Inf * ones(idx.nz) # update this \n",
     "x_u = Inf * ones(idx.nz) # update this \n",
-    "umax = 5 * ones(4)\n",
-    "rmin = [-Inf -Inf 1]\n",
-    "rmax = [Inf Inf 5]\n",
-    "for i = 1:N-1\n",
-    "    #Control Bounds\n",
-    "    u_inds = [(1:4) .+ i for i in (0:m_lift:m_lift*NUM_QUAD-1)]\n",
-    "    for u_index = u_inds\n",
-    "        x_l[idx.u[i]][u_index] .= 0\n",
-    "        x_u[idx.u[i]][u_index] .= umax\n",
-    "    end\n",
-    "    #Position Bounds\n",
-    "    r_inds = [(1:3) .+ i for i in (0:params.n_lift:params.n_lift*NUM_QUAD)]\n",
-    "    for x_idx = r_inds\n",
-    "        x_l[idx.x[i]][x_idx] = rmin\n",
-    "        x_u[idx.x[i]][x_idx] = rmax\n",
-    "    end\n",
-    "end\n",
+    "# umax = 5 * ones(4)\n",
+    "# rmin = [-Inf -Inf 1]\n",
+    "# rmax = [Inf Inf 5]\n",
+    "# for i = 1:N-1\n",
+    "#     #Control Bounds\n",
+    "#     u_inds = [(1:4) .+ i for i in (0:m_lift:m_lift*NUM_QUAD-1)]\n",
+    "#     for u_index = u_inds\n",
+    "#         x_l[idx.u[i]][u_index] .= 0\n",
+    "#         x_u[idx.u[i]][u_index] .= umax\n",
+    "#     end\n",
+    "#     #Position Bounds\n",
+    "#     r_inds = [(1:3) .+ i for i in (0:params.n_lift:params.n_lift*NUM_QUAD)]\n",
+    "#     for x_idx = r_inds\n",
+    "#         x_l[idx.x[i]][x_idx] = rmin\n",
+    "#         x_u[idx.x[i]][x_idx] = rmax\n",
+    "#     end\n",
+    "# end\n",
     "\n",
     "\n",
     "# TODO: inequality constraint bounds\n",
-    "c_l = -Inf * ones(2 * N) # update this \n",
-    "c_u = zeros(2 * N) # update this \n",
+    "c_l = -Inf * ones(0) # update this \n",
+    "c_u = zeros(0) # update this \n",
     "\n",
     "# TODO: initialize z0 with the reference Xref, Uref \n",
     "z0 = zeros(idx.nz) # update this\n",
@@ -568,20 +580,21 @@
     "# @show size(xic)\n",
     "# equal_tension_cable_constraint(params, z0)\n",
     "\n",
-    "\n",
+    "# @show size(c_l)\n",
+    "# @show size(c_u)\n",
+    "# @show size(inequality_constraints(params, z0))\n",
     "Z = fmincon(system_cost, equality_constraints, inequality_constraints,\n",
     "    x_l, x_u, c_l, c_u, z0, params, diff_type;\n",
-    "    tol=1e-6, c_tol=1e-6, max_iters=10_000, verbose=true)\n",
+    "    tol=1e-6, c_tol=1e-6, max_iters=100, verbose=true)\n",
     "\n",
     "# # pull the X and U solutions out of Z \n",
     "# X = [Z[idx.x[i]] for i = 1:N]\n",
-    "# U = [Z[idx.u[i]] for i = 1:(N-1)]\n",
-    "\n"
+    "# U = [Z[idx.u[i]] for i = 1:(N-1)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": []
