--- a/problem.ipynb
+++ b/problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,9 +247,9 @@
     "        x = Z[idx.x[i]]\n",
     "        u = Z[idx.u[i]]\n",
     "        for k = 1:NUM_QUAD\n",
-    "            quat = x[13*(k-1)+4:13*(k-1)+8]\n",
+    "            quat = x[13*(k-1)+4:13*(k-1)+7]\n",
     "            s = u[6*NUM_QUAD]\n",
-    "            push!(c, norm(s * quat, 2) - 1)\n",
+    "            push!(c, norm(s * quat, 2)^2 - 1)\n",
     "        end\n",
     "    end\n",
     "    return c\n",
@@ -291,17 +291,17 @@
     "function equality_constraints(params::NamedTuple, Z::Vector)::Vector\n",
     "    N, idx, xic, xg = params.N, params.idx, params.xic, params.xg\n",
     "    return [Z[idx.x[1]] - xic;\n",
-    "        Z[idx.x[N]] - xg\n",
-    "    dynamics_constraints(params, Z)]\n",
-    "    quaternion_constraints(params, Z);\n",
-    "    # equal_tension_cable_constraint(params, Z);\n",
-    "    # rope_length_constraint(params, Z)]\n",
+    "        Z[idx.x[N]] - xg;\n",
+    "        equal_tension_cable_constraint(params, Z);\n",
+    "    # dynamics_constraints(params, Z)]\n",
+    "    # quaternion_constraints(params, Z);\n",
+    "    rope_length_constraint(params, Z)]\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -452,8 +452,88 @@
       "---------all dimensions good------------------------\n",
       "---------diff type set to :auto (ForwardDiff.jl)----\n",
       "---------testing objective gradient-----------------\n",
-      "---------testing constraint Jacobian----------------\n"
+      "---------testing constraint Jacobian----------------\n",
+      "---------successfully compiled both derivatives-----\n",
+      "---------IPOPT beginning solve----------------------\n",
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit https://github.com/coin-or/Ipopt\n",
+      "******************************************************************************\n",
+      "\n",
+      "This is Ipopt version 3.14.4, running with linear solver MUMPS 5.4.1.\n",
+      "\n",
+      "Number of nonzeros in equality constraint Jacobian...:  4476186\n",
+      "Number of nonzeros in inequality constraint Jacobian.:        0\n",
+      "Number of nonzeros in Lagrangian Hessian.............:        0\n",
+      "\n",
+      "Total number of variables............................:     8658\n",
+      "                     variables with only lower bounds:        0\n",
+      "                variables with lower and upper bounds:        0\n",
+      "                     variables with only upper bounds:        0\n",
+      "Total number of equality constraints.................:      517\n",
+      "Total number of inequality constraints...............:        0\n",
+      "        inequality constraints with only lower bounds:        0\n",
+      "   inequality constraints with lower and upper bounds:        0\n",
+      "        inequality constraints with only upper bounds:        0\n",
+      "\n",
+      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
+      "   0  5.3734401e-09 3.00e+00 2.86e-04   0.0 0.00e+00    -  0.00e+00 0.00e+00   0\n",
+      "   1  3.6000190e+03 5.34e-11 2.97e+02 -11.0 3.00e+00    -  1.00e+00 1.00e+00h  1\n",
+      "   2  3.6000190e+03 5.28e-09 3.41e-07 -11.0 5.23e-09    -  1.00e+00 1.00e+00h  1\n",
+      "\n",
+      "Number of Iterations....: 2\n",
+      "\n",
+      "                                   (scaled)                 (unscaled)\n",
+      "Objective...............:   3.6000190194799543e+03    3.6000190194799543e+03\n",
+      "Dual infeasibility......:   3.4114551672459470e-07    3.4114551672459470e-07\n",
+      "Constraint violation....:   5.2814914663912305e-09    5.2814914663912305e-09\n",
+      "Variable bound violation:   0.0000000000000000e+00    0.0000000000000000e+00\n",
+      "Complementarity.........:   0.0000000000000000e+00    0.0000000000000000e+00\n",
+      "Overall NLP error.......:   3.4114551672459470e-07    3.4114551672459470e-07\n",
+      "\n",
+      "\n",
+      "Number of objective function evaluations             = 3\n",
+      "Number of objective gradient evaluations             = 3\n",
+      "Number of equality constraint evaluations            = 3\n",
+      "Number of inequality constraint evaluations          = 0\n",
+      "Number of equality constraint Jacobian evaluations   = 3\n",
+      "Number of inequality constraint Jacobian evaluations = 0\n",
+      "Number of Lagrangian Hessian evaluations             = 0\n",
+      "Total seconds in IPOPT                               = 41.338\n",
+      "\n",
+      "EXIT: Optimal Solution Found.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8658-element Vector{Float64}:\n",
+       "  1.4941967914007828\n",
+       " -1.3134910877055583\n",
+       "  2.5\n",
+       "  0.99115\n",
+       "  4.903750002858428e-16\n",
+       "  0.132909\n",
+       " -9.564559936893166e-17\n",
+       "  1.3134991870642803e-24\n",
+       " -5.494428422817431e-25\n",
+       " -1.3867337405478023e-24\n",
+       "  ⋮\n",
+       "  2.2402226010117846e-15\n",
+       "  3.0490964467070424e-16\n",
+       "  5.041526220540347e-15\n",
+       " -1.5000000000533484\n",
+       " -1.5000000000533484\n",
+       "  1.5\n",
+       "  1.477849510549195e-17\n",
+       " -8.234451372312634e-18\n",
+       " -1.4625985689530343e-17"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -594,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": []
