attempt at removing randomisation and trying to solve

--- a/problem.ipynb
+++ b/problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
     "    J = 0\n",
     "    for i = 1:N-1\n",
     "        J += 0.5 * (Z[idx.x[i]] - Xref[i])' * Q * (Z[idx.x[i]] - Xref[i]) +\n",
-    "             0.5 * (Z[idx.u[i]] - Uref[i])' * R * (Z[idx.u[i]] - Uref[i])\n",
+    "             0.5 * (Z[idx.u[i]] - 0 * Uref[i])' * R * (Z[idx.u[i]] - 0 * Uref[i]) #TODO \n",
     "    end\n",
     "    J += 0.5 * (Z[idx.x[N]] - Xref[N])' * Qf * (Z[idx.x[N]] - Xref[N])\n",
     "    return J\n",
@@ -292,16 +292,16 @@
     "    N, idx, xic, xg = params.N, params.idx, params.xic, params.xg\n",
     "    return [Z[idx.x[1]] - xic;\n",
     "        Z[idx.x[N]] - xg;\n",
-    "        equal_tension_cable_constraint(params, Z);\n",
-    "    # dynamics_constraints(params, Z)]\n",
-    "    # quaternion_constraints(params, Z);\n",
-    "    rope_length_constraint(params, Z)]\n",
+    "        # equal_tension_cable_constraint(params, Z);\n",
+    "        dynamics_constraints(params, Z);\n",
+    "        quaternion_constraints(params, Z)]\n",
+    "    # rope_length_constraint(params, Z)]\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -441,95 +441,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------checking dimensions of everything----------\n",
-      "---------all dimensions good------------------------\n",
-      "---------diff type set to :auto (ForwardDiff.jl)----\n",
-      "---------testing objective gradient-----------------\n",
-      "---------testing constraint Jacobian----------------\n",
-      "---------successfully compiled both derivatives-----\n",
-      "---------IPOPT beginning solve----------------------\n",
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit https://github.com/coin-or/Ipopt\n",
-      "******************************************************************************\n",
-      "\n",
-      "This is Ipopt version 3.14.4, running with linear solver MUMPS 5.4.1.\n",
-      "\n",
-      "Number of nonzeros in equality constraint Jacobian...:  4476186\n",
-      "Number of nonzeros in inequality constraint Jacobian.:        0\n",
-      "Number of nonzeros in Lagrangian Hessian.............:        0\n",
-      "\n",
-      "Total number of variables............................:     8658\n",
-      "                     variables with only lower bounds:        0\n",
-      "                variables with lower and upper bounds:        0\n",
-      "                     variables with only upper bounds:        0\n",
-      "Total number of equality constraints.................:      517\n",
-      "Total number of inequality constraints...............:        0\n",
-      "        inequality constraints with only lower bounds:        0\n",
-      "   inequality constraints with lower and upper bounds:        0\n",
-      "        inequality constraints with only upper bounds:        0\n",
-      "\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "   0  5.3734401e-09 3.00e+00 2.86e-04   0.0 0.00e+00    -  0.00e+00 0.00e+00   0\n",
-      "   1  3.6000190e+03 5.34e-11 2.97e+02 -11.0 3.00e+00    -  1.00e+00 1.00e+00h  1\n",
-      "   2  3.6000190e+03 5.28e-09 3.41e-07 -11.0 5.23e-09    -  1.00e+00 1.00e+00h  1\n",
-      "\n",
-      "Number of Iterations....: 2\n",
-      "\n",
-      "                                   (scaled)                 (unscaled)\n",
-      "Objective...............:   3.6000190194799543e+03    3.6000190194799543e+03\n",
-      "Dual infeasibility......:   3.4114551672459470e-07    3.4114551672459470e-07\n",
-      "Constraint violation....:   5.2814914663912305e-09    5.2814914663912305e-09\n",
-      "Variable bound violation:   0.0000000000000000e+00    0.0000000000000000e+00\n",
-      "Complementarity.........:   0.0000000000000000e+00    0.0000000000000000e+00\n",
-      "Overall NLP error.......:   3.4114551672459470e-07    3.4114551672459470e-07\n",
-      "\n",
-      "\n",
-      "Number of objective function evaluations             = 3\n",
-      "Number of objective gradient evaluations             = 3\n",
-      "Number of equality constraint evaluations            = 3\n",
-      "Number of inequality constraint evaluations          = 0\n",
-      "Number of equality constraint Jacobian evaluations   = 3\n",
-      "Number of inequality constraint Jacobian evaluations = 0\n",
-      "Number of Lagrangian Hessian evaluations             = 0\n",
-      "Total seconds in IPOPT                               = 41.338\n",
-      "\n",
-      "EXIT: Optimal Solution Found.\n"
+      "size(equality_constraints(params, z0)) = (6317,)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "8658-element Vector{Float64}:\n",
-       "  1.4941967914007828\n",
-       " -1.3134910877055583\n",
-       "  2.5\n",
-       "  0.99115\n",
-       "  4.903750002858428e-16\n",
-       "  0.132909\n",
-       " -9.564559936893166e-17\n",
-       "  1.3134991870642803e-24\n",
-       " -5.494428422817431e-25\n",
-       " -1.3867337405478023e-24\n",
-       "  ⋮\n",
-       "  2.2402226010117846e-15\n",
-       "  3.0490964467070424e-16\n",
-       "  5.041526220540347e-15\n",
-       " -1.5000000000533484\n",
-       " -1.5000000000533484\n",
-       "  1.5\n",
-       "  1.477849510549195e-17\n",
-       " -8.234451372312634e-18\n",
-       " -1.4625985689530343e-17"
+       "(6317,)"
       ]
      },
      "metadata": {},
@@ -571,7 +496,7 @@
     "\n",
     "# reference trajectory \n",
     "Xref = reference_trajectory(N, xic, xg)\n",
-    "Uref = [0.01 * randn(idx.nu) for i = 1:N-1]\n",
+    "Uref = [1 .+ (0.01 * randn(idx.nu)) for i = 1:N-1]\n",
     "\n",
     "n_lift = 13\n",
     "m_lift = 6 #5 + 1 for quaternion slack variable \n",
@@ -653,19 +578,19 @@
     "    z0[idx.u[i]] = Uref[i]\n",
     "end\n",
     "# adding a little noise to the initial guess is a good idea \n",
-    "z0 = z0 + (1e-6) * randn(idx.nz)\n",
+    "# z0 = z0 + (1e-6) * randn(idx.nz)\n",
     "\n",
     "diff_type = :auto\n",
     "\n",
     "# @show size(xic)\n",
     "# equal_tension_cable_constraint(params, z0)\n",
-    "\n",
+    "@show size(equality_constraints(params, z0))\n",
     "# @show size(c_l)\n",
     "# @show size(c_u)\n",
     "# @show size(inequality_constraints(params, z0))\n",
-    "Z = fmincon(system_cost, equality_constraints, inequality_constraints,\n",
-    "    x_l, x_u, c_l, c_u, z0, params, diff_type;\n",
-    "    tol=1e-6, c_tol=1e-6, max_iters=100, verbose=true)\n",
+    "# Z = fmincon(system_cost, equality_constraints, inequality_constraints,\n",
+    "#     x_l, x_u, c_l, c_u, z0, params, diff_type;\n",
+    "#     tol=1e-6, c_tol=1e-6, max_iters=100, verbose=true)\n",
     "\n",
     "# # pull the X and U solutions out of Z \n",
     "# X = [Z[idx.x[i]] for i = 1:N]\n",
@@ -674,7 +599,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(nx = 58, nu = 28, N = 101, nz = 8658, nc = 5800, x = UnitRange{Int64}[1:58, 87:144, 173:230, 259:316, 345:402, 431:488, 517:574, 603:660, 689:746, 775:832  …  7827:7884, 7913:7970, 7999:8056, 8085:8142, 8171:8228, 8257:8314, 8343:8400, 8429:8486, 8515:8572, 8601:8658], u = UnitRange{Int64}[59:86, 145:172, 231:258, 317:344, 403:430, 489:516, 575:602, 661:688, 747:774, 833:860  …  7799:7826, 7885:7912, 7971:7998, 8057:8084, 8143:8170, 8229:8256, 8315:8342, 8401:8428, 8487:8514, 8573:8600], c = UnitRange{Int64}[1:58, 59:116, 117:174, 175:232, 233:290, 291:348, 349:406, 407:464, 465:522, 523:580  …  5221:5278, 5279:5336, 5337:5394, 5395:5452, 5453:5510, 5511:5568, 5569:5626, 5627:5684, 5685:5742, 5743:5800])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "create_idx(nx, nu, N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": []
