--- a/exaggerated slack.ipynb
+++ b/exaggerated slack.ipynb
@@ -428,7 +428,7 @@
     "            r_load = xi[(1:3).+n_lift*NUM_QUAD]\n",
     "            xi_quads = [xi[(quad-1)*n_lift+1:n_lift*quad] for quad = 1:NUM_QUAD]\n",
     "            j = NUM_QUAD - 1\n",
-    "            push!(c, norm(-xi_quads[j][1:3] + r_load)^2 - dcable^2)\n",
+    "            push!(c, norm(xi_quads[j][1:3] - r_load)^2 - dcable^2)\n",
     "        else\n",
     "            push!(c, 0)\n",
     "        end\n",
